--- a/index-1.html
+++ b/index-1.html
@@ -44,7 +44,7 @@
             <p>+55 11 91419-8063</p>
             <p><a href="herbertdasilvadacruz@outlook.com">herbertdasilvadacruz@outlook.com</a></p>
         </div>
-        <img src="c:\Users\herbe\Downloads\Foto de perfil (Pessoal).jpg" alt="Foto de perfil">
+        <img src="imagem_para_web.jpg" alt="Foto de perfil">
     </header>
 
     <!-- Objetivo -->
